--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -85,6 +85,9 @@
     <Compile Include="Settings\ViewControllers.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Back Button.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(TargetFileName)" "C:\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins"</PostBuildEvent>
