implement ui keyboard
-Implemented CustomMenu, a simplified method of adding complete customized menu pages (similar to the saber menu, avatar menu, and platforms menu)
-Implemented ui keyboard, which allows for other mods to easily add a keyboard entry option to collect user input

--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -74,6 +74,8 @@
   <ItemGroup>
     <Compile Include="BeatSaber\BeatSaberUI.cs" />
     <Compile Include="BeatSaber\BeatSaberUIExtensions.cs" />
+    <Compile Include="BeatSaber\CustomMenu.cs" />
+    <Compile Include="BeatSaber\CustomUIKeyboard.cs" />
     <Compile Include="GameplaySettings\GameplaySettingsTypes.cs" />
     <Compile Include="GameplaySettings\GameplaySettingsUI.cs" />
     <Compile Include="MenuButton\MenuButtonUI.cs" />
@@ -87,6 +89,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Back Button.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Edit Icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
