--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -52,6 +52,10 @@
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\Program Files\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AssetBundleModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Program Files\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\..\Program Files\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
@@ -81,6 +85,11 @@
     <Compile Include="MenuButton\MenuButtonUI.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIElements\ColorPicker.cs" />
+    <Compile Include="UIElements\ColorPickerCore.cs" />
+    <Compile Include="UIElements\ColorPickerHue.cs" />
+    <Compile Include="UIElements\ColorPickerPreview.cs" />
+    <Compile Include="UIElements\SliderProperties.cs" />
     <Compile Include="Utilities\ReflectionUtil.cs" />
     <Compile Include="Settings\SettingsUI.cs" />
     <Compile Include="Settings\TableViewHelper.cs" />
@@ -94,7 +103,13 @@
     <EmbeddedResource Include="Resources\Edit Icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="UIElements\" />
+    <EmbeddedResource Include="Resources\Radial Color Picker.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\ColorPicker.assetbundle" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Color Picker Base.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
