move classes into respective files, add comments

--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -56,8 +56,12 @@
   <ItemGroup>
     <Compile Include="BeatSaber\BeatSaberUI.cs" />
     <Compile Include="BeatSaber\BeatSaberUIExtensions.cs" />
+    <Compile Include="BeatSaber\CustomFlowCoordinator.cs" />
+    <Compile Include="BeatSaber\CustomListViewController.cs" />
     <Compile Include="BeatSaber\CustomMenu.cs" />
+    <Compile Include="BeatSaber\CustomViewController.cs" />
     <Compile Include="Settings\CustomSettingsListViewController.cs" />
+    <Compile Include="Settings\SubMenu.cs" />
     <Compile Include="UIElements\ColorPickerPreviewClickable.cs" />
     <Compile Include="UIElements\CustomSlider.cs" />
     <Compile Include="BeatSaber\CustomUIKeyboard.cs" />
