improve color picker ui, bugfixes
-Fix divide by zero error in IntViewController
-Add ApplyImmediately option for each of the different settings ViewController types, which will cause values to be applied instantly instead of when apply/ok is clicked in the settings menu
-Add member functions to toggle the value of gameplay settings options via code
-Adjust ColorPicker ui more

--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -98,7 +98,6 @@
     <PostBuildEvent>copy /Y "$(TargetDir)$(TargetFileName)" "C:\Program Files (x86)\Steam\steamapps\common\Beat Saber\Plugins"</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
+    <PreBuildEvent>"$(ProjectDir)..\PluginVersionSetter.exe" "$(ProjectDir)Properties\AssemblyInfo.cs" "$(ProjectDir)Plugin.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
